--- a/css/task-03.css
+++ b/css/task-03.css
@@ -1,14 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
 .gallery {
   display: flex;
   list-style: none;
-  margin-top: 30px;
+  margin-top: -30px;
   margin-left: -30px;
-  margin-right: -30px;
+  padding: 0;
 }
 .gallery__item {
   flex-basis: calc(100% / 3 - 30px);
+  margin-top: 30px;
   margin-left: 30px;
-  margin-right: 30px;
 }
 .gallery__img {
   display: block;
